// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table UserData {
  id integer [primary key]
  username varchar
  password varchar 
  email string
}

Table UserEvent {
  id integer [primary key]
  event_id integer [not null]
  user_id integer [not null]
}

Table AccessToken {
  id integer [primary key]
  token string
  expires timestamp
}

Table EventData{
  id integer [primary key]
  location string
}



Ref: UserData.id < UserEvent.user_id
Ref: EventData.id < UserEvent.event_id
